<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.salesianostriana.dam.educatia_v1.MiperfilFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/miperfil_nombre"
                android:textColor="#00AB92"
                android:id="@+id/miperfil_tv_nombre"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="#595959"
                android:id="@+id/miperfil_et_nombre"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView_email"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="Luís Miguel L. M." />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/miperfil_abreviatura"
                android:textColor="#00AB92"
                android:id="@+id/miperfil_tv_abreviatura"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="#595959"
                android:id="@+id/miperfil_et_abreviatura"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView_email"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="luilopmag" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/miperfil_nombreC"
                android:textColor="#00AB92"
                android:id="@+id/miperfil_tv_nombreC"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="#595959"
                android:id="@+id/miperfil_et_nombreC"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView_email"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="Luís Miguel López Magaña" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/miperfil_usuario"
                android:textColor="#00AB92"
                android:id="@+id/miperfil_tv_usuario"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="#595959"
                android:id="@+id/miperfil_et_usuario"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView_email"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="luismi" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/miperfil_contrasena"
                android:textColor="#00AB92"
                android:id="@+id/miperfil_tv_contrasena"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="#595959"
                android:id="@+id/miperfil_et_contrasena"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView_email"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="1234" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/miperfil_email"
                android:textColor="#00AB92"
                android:id="@+id/miperfil_tv_email"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:textColor="#595959"
                android:id="@+id/miperfil_et_email"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView_email"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="luismi@gmail.com" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/miperfil_btn_cancelar"
                android:id="@+id/miperfil_btn_cancelar"
                android:textColor="#00AB92"
                android:textSize="20dp"
                android:background="@drawable/buttonshape_login_entrar"
                android:layout_weight="0.48" />

            <Button
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/miperfil_btn_guardar"
                android:layout_marginLeft="10dp"
                android:id="@+id/miperfil_btn_guardar"
                android:textColor="#00AB92"
                android:textSize="20dp"
                android:background="@drawable/buttonshape_login_entrar" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
